--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,8 @@
         <h1>Hello</h1>
         <h2>Servlet</h2>
             <h3>
-                <a href="./HTML/Registro.html">Registro</a>
+                <a href="./HTML/Registro.html">Registro</a><br>
+                <a href="/Cabecera">Cabecera</a>
             </h3>
     </body>
 </html>
