--- a/src/main/webapp/HTML/Registro.html
+++ b/src/main/webapp/HTML/Registro.html
@@ -28,7 +28,7 @@
             </div>
             <div>
                 Fecha:
-                <select>
+                <select name="dia">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -61,7 +61,7 @@
                     <option value="30">30</option>
                     <option value="31">31</option>
                 </select> 
-                <select>
+                <select name="mes">
                     <option value="01">01</option>
                     <option value="02">02</option>
                     <option value="03">03</option>
