--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,7 @@
         <h2>Servlet</h2>
             <h3>
                 <a href="./HTML/Registro.html">Registro</a><br>
+                <a href="./HTML/Registro2.html">Registro2</a><br>
                 <a href="/Cabecera">Cabecera</a>
             </h3>
     </body>
