--- a/src/main/webapp/HTML/Registro.html
+++ b/src/main/webapp/HTML/Registro.html
@@ -10,11 +10,11 @@
             <h1>Datos Personales</h1>
             <div id="nombre">
                 <label for="nombre">Nombre:</label>
-                <input type="text" name="Nombre" value="" placeholder="Nombre"/>
+                <input id="nombre" type="text" name="Nombre" value="" placeholder="Nombre"/>
             </div>
             <div>   
-                <label for="nombre">Apellidos:</label>
-                <input type="text" name="Apellidos" value="" placeholder="Apellidos"/>
+                <label for="apellidos">Apellidos:</label>
+                <input id="apellidos" type="text" name="Apellidos" value="" placeholder="Apellidos"/>
             </div>
             <div>
                 Sexo:<br>
