--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,7 +10,12 @@
             <h3>
                 <a href="./HTML/Registro.html">Registro</a><br>
                 <a href="./HTML/Registro2.html">Registro2</a><br>
-                <a href="/Cabecera">Cabecera</a>
+                <a href="./Cabecera">Cabecera</a>
             </h3>
+        <h2>JSP</h2>
+        <h3>
+            <a href="./HTML/Saludojsp.html">Saludo</a><br>
+            <a href="./HTML/CalcularEdad.html">Calcular Edad</a>
+        </h3>
     </body>
 </html>
