--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,19 +3,22 @@
     <head>
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" type="text/css" media="screen" href="./CSS/General.css" />
     </head>
     <body>
-        <h1>Hello</h1>
-        <h2>Servlet</h2>
-            <h3>
-                <a href="./HTML/Registro.html">Registro</a><br>
-                <a href="./HTML/Registro2.html">Registro2</a><br>
-                <a href="./Cabecera">Cabecera</a>
-            </h3>
-        <h2>JSP</h2>
-        <h3>
-            <a href="./HTML/Saludojsp.html">Saludo</a><br>
-            <a href="./HTML/CalcularEdad.html">Calcular Edad</a>
-        </h3>
+        <h1>Bienvenido</h1>
+        
+        <div>
+            <h2>Servlet</h2>
+            <p><a href="./HTML/Registro.html">Registro</a></p>
+            <p><a href="./HTML/Registro2.html">Registro2</a></p>
+            <p><a href="./Cabecera">Cabecera</a></p>
+        </div>
+        
+        <div>
+            <h2>JSP</h2>
+            <p><a href="./HTML/Saludojsp.html">Saludo</a></p>
+            <p><a href="./HTML/CalcularEdad.html">Calcular Edad</a></p>
+        </div>
     </body>
 </html>
