--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,8 +17,10 @@
         
         <div>
             <h2>JSP</h2>
-            <p><a href="./HTML/Saludojsp.html">Saludo</a></p>
-            <p><a href="./HTML/CalcularEdad.html">Calcular Edad</a></p>
+            <p>1.<a href="./HTML/Saludojsp.html">Saludo</a></p>
+            <p>2.<a href="./HTML/CalcularEdad.html">Calcular Edad</a></p>
+            <p>3.<a href="./JSP/Calculadora.jsp">Calculadora</a></p>
+            <p>4.<a href="./JSP/InterfazCookies.jsp">Control de cookies</a></p>
         </div>
     </body>
 </html>
