--- a/src/main/webapp/HTML/CalcularEdad.html
+++ b/src/main/webapp/HTML/CalcularEdad.html
@@ -24,5 +24,6 @@ and open the template in the editor.
                 <input type="submit" name="Enviar" value="Enviar">
             </div>
         </form>
+        <a href="../index.html"><input type="submit" name="Enviar" value="Volver"></a>
     </body>
 </html>
