--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,9 +19,9 @@
             <h2>JSP</h2>
             <p>1.<a href="./HTML/Saludojsp.html">Saludo</a></p>
             <p>2.<a href="./HTML/CalcularEdad.html">Calcular Edad</a></p>
-            <p>3.<a href="./JSP/Calculadora.jsp">Calculadora</a></p>
+            <p>3.<a href="./JSP/Calculadora/Calculadora.jsp">Calculadora</a></p>
             <p>4.<a href="./JSP/GestionCookies/InterfazCookies.jsp">Control de cookies</a></p>
-            <p>5.<a href="./JSP/ContadorCookie.jsp">Contador con cookies</a></p>
+            <p>5.<a href="./JSP/ContadorCookie/ContadorCookie.jsp">Contador con cookies</a></p>
         </div>
     </body>
 </html>
