Modificado Casa 10/10/2018 Completado los 4 primeros puntos de servlet solo falta mostrar los resultados del html en los formularios 2 y 3.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,23 +5,28 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" type="text/css" media="screen" href="./CSS/General.css" />
     </head>
-    <body>
-        <h1>Bienvenido</h1>
-        
+    <body>        
         <div>
-            <h2>Servlet</h2>
-            <p><a href="./HTML/Registro.html">Registro</a></p>
-            <p><a href="./HTML/Registro2.html">Registro2</a></p>
-            <p><a href="./Cabecera">Cabecera</a></p>
+            <h1>Servlet</h1>
+            <p>1.<a href="./HolaMundo">Hola Mundo</a></p>
+            <p>2.<a href="./HTML/formulario.html">Formulario Simple</a></p>
+            <p>3.<a href="./HTML/formularioComplejo.html">Formulario Complejo</a></p>
+            <p>4.<a href="/VidaServlet">Vida</a></p>
+            <p>5.<a href="./HTML/Registro.html">Registro</a></p>
+            <p>6.<a href="./HTML/Registro2.html">Registro con pantalla</a></p>
+            <p>7.<a href="./Cabecera">Cabecera</a></p>
+            <p>8.<a href="./Cabecera">Informacion Cliente</a></p>
+            <p>9.<a href="./Cabecera">Cabecera2</a></p>
         </div>
-        
         <div>
-            <h2>JSP</h2>
+            <h1>JSP</h1>
             <p>1.<a href="./HTML/Saludojsp.html">Saludo</a></p>
             <p>2.<a href="./HTML/CalcularEdad.html">Calcular Edad</a></p>
             <p>3.<a href="./JSP/Calculadora/Calculadora.jsp">Calculadora</a></p>
             <p>4.<a href="./JSP/GestionCookies/InterfazCookies.jsp">Control de cookies</a></p>
             <p>5.<a href="./JSP/ContadorCookie/ContadorCookie.jsp">Contador con cookies</a></p>
+            <p>6.<a href="./JSP/ContadorCookie/ContadorCookie.jsp">Control de sesiones</a></p>
+            <p>7.<a href="./JSP/ContadorCookie/ContadorCookie.jsp">Contador con sesiones</a></p>
         </div>
     </body>
 </html>
