--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,6 +27,7 @@
             <p>5.<a href="./JSP/ContadorCookie/ContadorCookie.jsp">Contador con cookies</a></p>
             <p>6.<a href="./JSP/GestionSesiones/GestionSesiones.jsp">Control de sesiones</a></p>
             <p>7.<a href="./JSP/ContadorCookie/ContadorCookie.jsp">Contador con sesiones</a></p>
+            <p>8.<a href="./JSP/Identificacion/Login.jsp">Identificacion</a></p>
         </div>
     </body>
 </html>
